campaign section added

--- a/index.html
+++ b/index.html
@@ -149,6 +149,22 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class = "wrapper">
+        <div class = "campaign">
+          <h2>The TakeCare Campaign</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          </p>
+        </div>
+        <div class = "btn">
+          <a href = "#fixme" title = "SayHello!">
+            About TakeCare
+          </a>
+        </div>
+        </div>
+      </div>
+    </section>
   </main>
 <!--main section end-->
 
