--- a/index.html
+++ b/index.html
@@ -83,7 +83,22 @@
           </h2>
         </div>
         <div class = "slider">
-          
+          <div class = "showSlide move">
+            <img src = "assets/images/1.jpeg" class = "im1">
+          </div>
+          <div class = "showSlide move">
+            <div class = "content">
+              <img src = "assets/images/2.jpeg" class = "im2">
+            </div>
+          </div>
+          <div class = "showSlide move">
+            <img src = "assets/images/3.jpeg" class = "im3">
+          </div>
+          <div class = "showSlide move">
+            <img src = "assets/images/4.jpg" class = "im4">
+          </div>
+          <a class="left" onclick="nextSlide(-1)">❮</a>  
+          <a class="right" onclick="nextSlide(1)">❯</a> 
         </div>
       </div>
     </section>
