t&c changed with tc

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <div class = "hr"></div>
     <div class = "fctpr">
       <div class = "fctpr-cont">
-        <div class = "t&c">
+        <div class = "tc">
           <a href = "#fixme" title = "T&C">Terms and Conditions</a>
         </div>
         <div class = "pp">
