fixed the required changes in doc

--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
     <div class = "head">
       <div class = "logo">
         <h1>
-          <a href = "#fixme" title = "AboutUs">
-            <img src = "assets/images/tclogo.png">
+          <a href = "index.html" title = "TakeCare">
+            <img src = "assets/images/tclogo.png" alt = "TakeCare">
           </a>
         </h1>
       </div>
       <div class = "menu">
         <nav>
-          <a href = "#fixme" title = "About">About</a>
-          <a href = "#fixme" title = "Films">Films</a>
-          <a href = "#fixme" title = "Get Started">Get Started</a>
-          <a href = "#fixme" title = "Events">Events</a>
-          <a href = "#fixme" title = "Contact Us">Contact Us</a>
+          <a href = "#FIXME" title = "About">About</a>
+          <a href = "#FIXME" title = "Films">Films</a>
+          <a href = "#FIXME" title = "Get Started">Get Started</a>
+          <a href = "#FIXME" title = "Events">Events</a>
+          <a href = "#FIXME" title = "Contact Us">Contact Us</a>
         </nav>
       </div>
       <div class = "social">
         <div class = "medium">
-          <a href = "#fixme" class = "fab fa-facebook" title = "Facebook"></a>
-          <a href = "#fixme" class = "fab fa-youtube" title = "Youtube"></a>
-          <a href = "#fixme" class = "fab fa-twitter" title = "Twitter"></a>
+          <a href = "#FIXME" target = "_blank" class = "fab fa-facebook" title = "Facebook"></a>
+          <a href = "#FIXME" target = "_blank" class = "fab fa-youtube" title = "Youtube"></a>
+          <a href = "#FIXME" target = "_blank" class = "fab fa-twitter" title = "Twitter"></a>
         </div>
       </div>
     </div>
@@ -140,7 +140,7 @@
             </div>
             <div class = "see-more-films">
               <div class = 'btn'>
-                <a href = "#fixme" title = "See more films">See More Films</a>
+                <a href = "#FIXME" title = "See More Films">See More Films</a>
               </div>
             </div>
           </div>
@@ -156,7 +156,7 @@
           </p>
         </div>
         <div class = "btn">
-          <a href = "#fixme" title = "SayHello!">
+          <a href = "#FIXME" title = "Say Hello To You!">
             Say Hello To You!
           </a>
         </div>
@@ -171,7 +171,7 @@
           </p>
         </div>
         <div class = "btn">
-          <a href = "#fixme" title = "SayHello!">
+          <a href = "#FIXME" title = "About TakeCare">
             About TakeCare
           </a>
         </div>
@@ -186,23 +186,25 @@
     <div class = "f-flex">
       <div class = "f1">
         <div class = "f-logo">
-          <a href = "#fixme" title = "Aboutus">
-            <img src = "assets/images/tclogo.png" alt = "TakeCare">
-          </a>
+          <h3>
+            <a href = "index.html" title = "TakeCare">
+              <img src = "assets/images/tclogo.png" alt = "TakeCare">
+            </a>
+          </h3>
       </div>
       </div>
       <div class = "f2">
         <div class = "list">
           <ul>
             <div class = "list1">
-              <li><a href = "#fixme" title = "Home">Home</a></li>
-              <li><a href = "#fixme" title = "Films">Films</a></li>
-              <li><a href = "#fixme" title = "Events">Events</a></li>
+              <li><a href = "#FIXME" title = "Home">Home</a></li>
+              <li><a href = "#FIXME" title = "Films">Films</a></li>
+              <li><a href = "#FIXME" title = "Events">Events</a></li>
             </div>
             <div class = "list2">
-              <li><a href = "#fixme" title = "About">About</a></li>
-              <li><a href = "#fixme" title = "Resources">Resources</a></li>
-              <li><a href = "#fixme" title = "Contact Us">Contact Us</a></li>
+              <li><a href = "#FIXME" title = "About">About</a></li>
+              <li><a href = "#FIXME" title = "Resources">Resources</a></li>
+              <li><a href = "#FIXME" title = "Contact Us">Contact Us</a></li>
             </div>
           </ul>
         </div>
@@ -214,15 +216,15 @@
           <div class = "soc2">
             <div class = "facebook">
               <a class = "fab fa-facebook" ></a>
-              <a href = "#fixme" title = "facebook" >Facebook</a>
+              <a href = "#FIXME" target = "_blank" title = "facebook" >Facebook</a>
             </div>
             <div class = "youtube">
               <a class = "fab fa-youtube"></a>
-              <a href = "#fixme" title = "youTube" >YouTube</a>
+              <a href = "#FIXME" target = "_blank" title = "youTube" >YouTube</a>
             </div>
             <div class = "twitter">
               <a class = "fab fa-twitter"></a>
-              <a href = "#fixme" title = "Twitter" >Twitter</a>
+              <a href = "#FIXME" target = "_blank" title = "Twitter" >Twitter</a>
             </div>
           </div>
       </div>
@@ -235,7 +237,7 @@
         </div>
         <div class = "email">
           <a class="fas fa-envelope"></a>
-          <a href = "mailto:hello@takecare.org" title = "Email Us @">hello@takecare.org</a>
+          <a href = "mailto:hello@takecare.org" title = "hello@takecare.org">hello@takecare.org</a>
         </div>
       </div>
     </div>
@@ -243,13 +245,13 @@
     <div class = "fctpr">
       <div class = "fctpr-cont">
         <div class = "tc">
-          <a href = "#fixme" title = "T&C">Terms and Conditions</a>
+          <a href = "#fixme" title = "Terms and Conditions">Terms and Conditions</a>
         </div>
         <div class = "pp">
           <a href = "#fixme" title = "Privacy Policy">Privacy Policy</a>
         </div>
         <div class = "rs">
-          <a href = "#fixme" title = "copyright">&#169; 2020 TakeCare All rights reserved</a>
+          <a href = "#fixme" title = "Copyright">&#169; 2020 TakeCare All rights reserved</a>
         </div>
       </div>
     </div>
