--- a/index.html
+++ b/index.html
@@ -245,13 +245,13 @@
     <div class = "fctpr">
       <div class = "fctpr-cont">
         <div class = "tc">
-          <a href = "#fixme" title = "Terms and Conditions">Terms and Conditions</a>
+          <a href = "#FIXME" title = "Terms and Conditions">Terms and Conditions</a>
         </div>
         <div class = "pp">
-          <a href = "#fixme" title = "Privacy Policy">Privacy Policy</a>
+          <a href = "#FIXME" title = "Privacy Policy">Privacy Policy</a>
         </div>
         <div class = "rs">
-          <a href = "#fixme" title = "Copyright">&#169; 2020 TakeCare All rights reserved</a>
+          <a href = "#FIXME" title = "Copyright">&#169; 2020 TakeCare All rights reserved</a>
         </div>
       </div>
     </div>
